2003-07-20  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Reorganized supervision tree

2003-07-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_register.erl: Bugfix

2003-07-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Close connection after key
	verification

	* src/ejabberd_c2s.erl: start replaced with start_link
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd_service.erl: Likewise

	* src/ejabberd_listener.erl: Now uses proc_lib to spawn listeners,
	removed 3rd parameter in listener configuration (assumed to equal
	start_link)

	* src/ejabberd.rel: Updated

	* doc/guide.tex: Small changes

	* doc/Makefile: Added implicit charset specification to hevea

2003-07-12  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated (thanks to Sergei Golovan)

	* src/expat_erl.c: Added #ifdef for WIN32 (thanks to Sergei
	Golovan)
	* src/mod_irc/iconv_erl.c: Likewise

	* src/configure.erl: Defines ERLANG_DIR variable (thanks to Sergei
	Golovan)
	* **/Makefile: Use ERLANG_DIR (thanks to Sergei Golovan)

	* **/Makefile.win32: Makefiles for windows build (thanks to Sergei
	Golovan)
	* src/configure.bat: Configuration script for windows (thanks to
	Sergei Golovan)

2003-07-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Added suport for meta-node
	"pubsub/nodes"

2003-07-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Most of functions now works

2003-07-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Pub/sub implementation (not
	completed yet)

2003-07-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added pub/sub nemaspaces

2003-07-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/iconv_erl.c (iconv_erl_control): Bugfix

2003-06-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Fixed room destroying
	* src/mod_muc/mod_muc.erl: Likewise
