@@ -1,3 +1,15 @@
+2003-07-21  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_vcard.erl: Bugfix
+
+	* src/mod_roster.erl: Bugfix
+
+	* src/jlib.hrl: Added iq:privacy namespace
+
+	* src/mod_irc/mod_irc_connection.erl: Added support for NOTICE and
+	CODEPAGE commands, better support for QUIT and PART commands
+	(thanks to Oleg V. Motienko)
+
 2003-07-20  Alexey Shchepin  <alexey@sevcom.net>
 
 	* (all): Reorganized supervision tree
